Remove extra comment

--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -40,9 +40,7 @@
     "# Specify proxy and no_proxy value if applicable\n",
     "http_proxy=\"\" ## \"http://<proxy_host>:<port>\"\n",
     "# After default.svc append comma separated list of IP address, hostname, CIDR block, service name, etc.\n",
-    "no_proxy=\"\" ## \"localhost,.cluster.local,.svc,.default.svc, <host>:<port>, x.x.x.x/y,...\"\n",
-    "\n",
-    "# Install required packages (Kubeflow Pipelines and Katib SDK)."
+    "no_proxy=\"\" ## \"localhost,.cluster.local,.svc,.default.svc, <host>:<port>, x.x.x.x/y,...\""
    ]
   },
   {
