EZAF-6041 removed proxy values form Ray GPU example

--- a/Data-Science/Ray/Ray-GPU/ray-gpu-executor.ipynb
+++ b/Data-Science/Ray/Ray-GPU/ray-gpu-executor.ipynb
@@ -87,7 +87,8 @@
     "    runtime_env={\n",
     "        \"working_dir\": \"./\",\n",
     "        \"pip\": [\"tensorflow==2.13.0\"],\n",
-    "        \"env_vars\": {\"http_proxy\":\"http://10.78.90.46:80\",\"https_proxy\":\"http://10.78.90.46:80\",\"HTTP_PROXY\":\"http://10.78.90.46:80\",\"HTTPS_PROXY\":\"http://10.78.90.46:80\"}\n",
+    "        # Add proxy in env_vars if required\n",
+    "        \"env_vars\": {}      \n",
     "    },\n",
     "    entrypoint_num_gpus = 1,\n",
     "    entrypoint_num_cpus = 1\n",
