--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -21,7 +21,7 @@
     "# # You need to generate secret to have ability read datasource files from S3 bucket by Spark application (Airflow DAG)\n",
     "# # Copy template \"object_store_secret.yaml.tpl\" from shared/ezua-tutorials/current-release/Data-Analytics/Spark directory to e.g. user folder\n",
     "\n",
-    "# # Customers need to install following images manually in order to run the example.\n",
+    "# # Users have to pull the following images manually and made available in local repo for clusters in airgap network to run the example.\n",
     "  # \"nikenano/launchernew:latest\" , \"quay.io/aipipeline/kserve-component:v0.10.1\"\n",
     "\n",
     "import kfp\n",
