Update MNIST example for adding resources to tf jobs

--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -234,6 +234,22 @@
     "                                            \"mountPath\": mnt_path,\n",
     "                                            \"name\": \"data-volume\"\n",
     "                                        }\n",
+    "                                    ],\n",
+    "                                    \"resources\":[\n",
+    "                                        {\n",
+    "                                            \"limits\":[\n",
+    "                                                {\n",
+    "                                                    \"cpu\":'2Gi',\n",
+    "                                                    \"memory\":'1Gi'\n",
+    "                                                }\n",
+    "                                            ]\n",
+    "                                            \"requests\":[\n",
+    "                                                {\n",
+    "                                                    \"cpu\":'100m',\n",
+    "                                                    \"memory\":'25Mi'\n",
+    "                                                }\n",
+    "                                            ]\n",
+    "                                        }\n",
     "                                    ]\n",
     "                                }\n",
     "                            ],\n",
@@ -281,6 +297,22 @@
     "                                        {\n",
     "                                            \"mountPath\": mnt_path,\n",
     "                                            \"name\": \"data-volume\"\n",
+    "                                        }\n",
+    "                                    ],\n",
+    "                                    \"resources\":[\n",
+    "                                        {\n",
+    "                                            \"limits\":[\n",
+    "                                                {\n",
+    "                                                    \"cpu\":'2Gi',\n",
+    "                                                    \"memory\":'1Gi'\n",
+    "                                                }\n",
+    "                                            ]\n",
+    "                                            \"requests\":[\n",
+    "                                                {\n",
+    "                                                    \"cpu\":'100m',\n",
+    "                                                    \"memory\":'25Mi'\n",
+    "                                                }\n",
+    "                                            ]\n",
     "                                        }\n",
     "                                    ]\n",
     "                                }\n",
@@ -426,6 +458,22 @@
     "                                \"mountPath\": mnt_path,\n",
     "                                \"name\": \"data-volume\"\n",
     "                            }\n",
+    "                        ],\n",
+    "                        \"resources\":[\n",
+    "                            {\n",
+    "                                \"limits\":[\n",
+    "                                    {\n",
+    "                                        \"cpu\":'2',\n",
+    "                                        \"memory\": '1Gi'\n",
+    "                                    }\n",
+    "                                ]\n",
+    "                                \"requests\":[\n",
+    "                                    {\n",
+    "                                        \"cpu\": '100m',\n",
+    "                                        \"memory\":'25Mi'\n",
+    "                                    }\n",
+    "                                ]\n",
+    "                            }\n",
     "                        ]\n",
     "                    }\n",
     "                ],\n",
@@ -482,6 +530,22 @@
     "                            {\n",
     "                                \"mountPath\": mnt_path,\n",
     "                                \"name\": \"data-volume\"\n",
+    "                            }\n",
+    "                        ],\n",
+    "                        \"resources\":[\n",
+    "                            {\n",
+    "                                \"limits\":[\n",
+    "                                    {\n",
+    "                                        \"cpu\":'2'\n",
+    "                                        \"memory\": '1Gi'\n",
+    "                                    }\n",
+    "                                ]\n",
+    "                                \"requests\":[\n",
+    "                                    {\n",
+    "                                        \"cpu\": '100m'\n",
+    "                                        \"memory\":'25Mi'\n",
+    "                                    }\n",
+    "                                ]\n",
     "                            }\n",
     "                        ]\n",
     "                    }\n",
