--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -235,22 +235,19 @@
     "                                            \"name\": \"data-volume\"\n",
     "                                        }\n",
     "                                    ],\n",
-    "                                    \"resources\":[\n",
-    "                                        {\n",
-    "                                            \"limits\":[\n",
-    "                                                {\n",
-    "                                                    \"cpu\":'2Gi',\n",
-    "                                                    \"memory\":'1Gi'\n",
-    "                                                }\n",
-    "                                            ]\n",
-    "                                            \"requests\":[\n",
-    "                                                {\n",
-    "                                                    \"cpu\":'100m',\n",
-    "                                                    \"memory\":'25Mi'\n",
-    "                                                }\n",
-    "                                            ]\n",
-    "                                        }\n",
-    "                                    ]\n",
+    "                                    \"resources\":\n",
+    "                                    {\n",
+    "                                        \"limits\":\n",
+    "                                            {\n",
+    "                                                \"cpu\":'2Gi',\n",
+    "                                                \"memory\":'1Gi'\n",
+    "                                            },\n",
+    "                                        \"requests\":\n",
+    "                                            {\n",
+    "                                                \"cpu\":'100m',\n",
+    "                                                \"memory\":'25Mi'\n",
+    "                                            }\n",
+    "                                    }      \n",
     "                                }\n",
     "                            ],\n",
     "                            \"imagePullSecrets\": [\n",
@@ -299,22 +296,19 @@
     "                                            \"name\": \"data-volume\"\n",
     "                                        }\n",
     "                                    ],\n",
-    "                                    \"resources\":[\n",
-    "                                        {\n",
-    "                                            \"limits\":[\n",
-    "                                                {\n",
-    "                                                    \"cpu\":'2Gi',\n",
-    "                                                    \"memory\":'1Gi'\n",
-    "                                                }\n",
-    "                                            ]\n",
-    "                                            \"requests\":[\n",
-    "                                                {\n",
-    "                                                    \"cpu\":'100m',\n",
-    "                                                    \"memory\":'25Mi'\n",
-    "                                                }\n",
-    "                                            ]\n",
-    "                                        }\n",
-    "                                    ]\n",
+    "                                    \"resources\":\n",
+    "                                    {\n",
+    "                                        \"limits\":\n",
+    "                                            {\n",
+    "                                                \"cpu\":'2Gi',\n",
+    "                                                \"memory\":'1Gi'\n",
+    "                                            },\n",
+    "                                        \"requests\":\n",
+    "                                            {\n",
+    "                                                \"cpu\":'100m',\n",
+    "                                                \"memory\":'50Mi'\n",
+    "                                            }\n",
+    "                                    }\n",
     "                                }\n",
     "                            ],\n",
     "                            \"imagePullSecrets\": [\n",
@@ -459,22 +453,20 @@
     "                                \"name\": \"data-volume\"\n",
     "                            }\n",
     "                        ],\n",
-    "                        \"resources\":[\n",
-    "                            {\n",
-    "                                \"limits\":[\n",
-    "                                    {\n",
-    "                                        \"cpu\":'2',\n",
-    "                                        \"memory\": '1Gi'\n",
-    "                                    }\n",
-    "                                ]\n",
-    "                                \"requests\":[\n",
-    "                                    {\n",
-    "                                        \"cpu\": '100m',\n",
-    "                                        \"memory\":'25Mi'\n",
-    "                                    }\n",
-    "                                ]\n",
-    "                            }\n",
-    "                        ]\n",
+    "                        \"resources\":\n",
+    "                        {\n",
+    "                            \"limits\":\n",
+    "                                {\n",
+    "                                    \"cpu\":'2',\n",
+    "                                    \"memory\": '1Gi'\n",
+    "                                },\n",
+    "                            \n",
+    "                            \"requests\":\n",
+    "                                {\n",
+    "                                    \"cpu\": '100m',\n",
+    "                                    \"memory\":'50Mi'\n",
+    "                                }\n",
+    "                        }\n",
     "                    }\n",
     "                ],\n",
     "                \"imagePullSecrets\": [\n",
@@ -532,22 +524,19 @@
     "                                \"name\": \"data-volume\"\n",
     "                            }\n",
     "                        ],\n",
-    "                        \"resources\":[\n",
-    "                            {\n",
-    "                                \"limits\":[\n",
-    "                                    {\n",
-    "                                        \"cpu\":'2'\n",
-    "                                        \"memory\": '1Gi'\n",
-    "                                    }\n",
-    "                                ]\n",
-    "                                \"requests\":[\n",
-    "                                    {\n",
-    "                                        \"cpu\": '100m'\n",
-    "                                        \"memory\":'25Mi'\n",
-    "                                    }\n",
-    "                                ]\n",
-    "                            }\n",
-    "                        ]\n",
+    "                        \"resources\":\n",
+    "                        {\n",
+    "                            \"limits\":\n",
+    "                                {\n",
+    "                                    \"cpu\":'2',\n",
+    "                                    \"memory\": '1Gi'\n",
+    "                                },\n",
+    "                            \"requests\":\n",
+    "                                {\n",
+    "                                    \"cpu\": '100m',\n",
+    "                                    \"memory\":'50Mi'\n",
+    "                                }\n",
+    "                        }\n",
     "                    }\n",
     "                ],\n",
     "                \"imagePullSecrets\": [\n",
