--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -237,16 +237,14 @@
     "                                    ],\n",
     "                                    \"resources\":\n",
     "                                    {\n",
-    "                                        \"limits\":\n",
-    "                                            {\n",
-    "                                                \"cpu\":'2Gi',\n",
-    "                                                \"memory\":'1Gi'\n",
-    "                                            },\n",
-    "                                        \"requests\":\n",
-    "                                            {\n",
-    "                                                \"cpu\":'100m',\n",
-    "                                                \"memory\":'25Mi'\n",
-    "                                            }\n",
+    "                                        \"limits\":{\n",
+    "                                            \"cpu\":\"2Gi\",\n",
+    "                                            \"memory\":\"1Gi\"\n",
+    "                                        },\n",
+    "                                        \"requests\":{\n",
+    "                                            \"cpu\":\"100m\",\n",
+    "                                            \"memory\":\"25Mi\"\n",
+    "                                        }\n",
     "                                    }      \n",
     "                                }\n",
     "                            ],\n",
@@ -298,16 +296,14 @@
     "                                    ],\n",
     "                                    \"resources\":\n",
     "                                    {\n",
-    "                                        \"limits\":\n",
-    "                                            {\n",
-    "                                                \"cpu\":'2Gi',\n",
-    "                                                \"memory\":'1Gi'\n",
-    "                                            },\n",
-    "                                        \"requests\":\n",
-    "                                            {\n",
-    "                                                \"cpu\":'100m',\n",
-    "                                                \"memory\":'50Mi'\n",
-    "                                            }\n",
+    "                                        \"limits\":{\n",
+    "                                            \"cpu\":\"2Gi\",\n",
+    "                                            \"memory\":\"1Gi\"\n",
+    "                                        },\n",
+    "                                        \"requests\":{\n",
+    "                                            \"cpu\":\"100m\",\n",
+    "                                            \"memory\":\"50Mi\"\n",
+    "                                        }\n",
     "                                    }\n",
     "                                }\n",
     "                            ],\n",
@@ -455,17 +451,14 @@
     "                        ],\n",
     "                        \"resources\":\n",
     "                        {\n",
-    "                            \"limits\":\n",
-    "                                {\n",
-    "                                    \"cpu\":'2',\n",
-    "                                    \"memory\": '1Gi'\n",
-    "                                },\n",
-    "                            \n",
-    "                            \"requests\":\n",
-    "                                {\n",
-    "                                    \"cpu\": '100m',\n",
-    "                                    \"memory\":'50Mi'\n",
-    "                                }\n",
+    "                            \"limits\":{\n",
+    "                                \"cpu\":\"2\",\n",
+    "                                \"memory\": \"1Gi\"\n",
+    "                            },\n",
+    "                            \"requests\":{\n",
+    "                                \"cpu\": \"100m\",\n",
+    "                                \"memory\":\"50Mi\"\n",
+    "                            }\n",
     "                        }\n",
     "                    }\n",
     "                ],\n",
@@ -526,16 +519,14 @@
     "                        ],\n",
     "                        \"resources\":\n",
     "                        {\n",
-    "                            \"limits\":\n",
-    "                                {\n",
-    "                                    \"cpu\":'2',\n",
-    "                                    \"memory\": '1Gi'\n",
-    "                                },\n",
-    "                            \"requests\":\n",
-    "                                {\n",
-    "                                    \"cpu\": '100m',\n",
-    "                                    \"memory\":'50Mi'\n",
-    "                                }\n",
+    "                            \"limits\":{\n",
+    "                                \"cpu\":\"2\",\n",
+    "                                \"memory\":\"1Gi\"\n",
+    "                            },\n",
+    "                            \"requests\":{\n",
+    "                                \"cpu\": \"100m\",\n",
+    "                                \"memory\":\"50Mi\"\n",
+    "                            }\n",
     "                        }\n",
     "                    }\n",
     "                ],\n",
