Update resources in trial spec

--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -238,7 +238,7 @@
     "                                    \"resources\":\n",
     "                                    {\n",
     "                                        \"limits\":{\n",
-    "                                            \"cpu\":\"2Gi\",\n",
+    "                                            \"cpu\":\"2\",\n",
     "                                            \"memory\":\"1Gi\"\n",
     "                                        },\n",
     "                                        \"requests\":{\n",
@@ -297,7 +297,7 @@
     "                                    \"resources\":\n",
     "                                    {\n",
     "                                        \"limits\":{\n",
-    "                                            \"cpu\":\"2Gi\",\n",
+    "                                            \"cpu\":\"2\",\n",
     "                                            \"memory\":\"1Gi\"\n",
     "                                        },\n",
     "                                        \"requests\":{\n",
