Add resources to inferenceService

--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -243,7 +243,7 @@
     "                                        },\n",
     "                                        \"requests\":{\n",
     "                                            \"cpu\":\"100m\",\n",
-    "                                            \"memory\":\"25Mi\"\n",
+    "                                            \"memory\":\"50Mi\"\n",
     "                                        }\n",
     "                                    }      \n",
     "                                }\n",
@@ -593,6 +593,13 @@
     "        predictor:\n",
     "          tensorflow:\n",
     "            storageUri: \"pvc://{volume_str}/\"\n",
+    "            resources:\n",
+    "              limits:\n",
+    "                cpu: '2'\n",
+    "                memory: 1Gi\n",
+    "              requests:\n",
+    "                cpu: 100m\n",
+    "                memory: 50Mi\n",
     "      '''\n",
     "\n",
     "    serving_launcher_op = components.load_component_from_file(serving_component_url)\n",
