[WIP] Ezaf 6035 - Add Resources to tfjobs in MNIST example. (#198)
* Update MNIST example for adding resources to tf jobs

* Update example

* Update syntax

* Update resources in trial spec

* Add resources to inferenceService

--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -234,7 +234,18 @@
     "                                            \"mountPath\": mnt_path,\n",
     "                                            \"name\": \"data-volume\"\n",
     "                                        }\n",
-    "                                    ]\n",
+    "                                    ],\n",
+    "                                    \"resources\":\n",
+    "                                    {\n",
+    "                                        \"limits\":{\n",
+    "                                            \"cpu\":\"2\",\n",
+    "                                            \"memory\":\"1Gi\"\n",
+    "                                        },\n",
+    "                                        \"requests\":{\n",
+    "                                            \"cpu\":\"100m\",\n",
+    "                                            \"memory\":\"50Mi\"\n",
+    "                                        }\n",
+    "                                    }      \n",
     "                                }\n",
     "                            ],\n",
     "                            \"imagePullSecrets\": [\n",
@@ -282,7 +293,18 @@
     "                                            \"mountPath\": mnt_path,\n",
     "                                            \"name\": \"data-volume\"\n",
     "                                        }\n",
-    "                                    ]\n",
+    "                                    ],\n",
+    "                                    \"resources\":\n",
+    "                                    {\n",
+    "                                        \"limits\":{\n",
+    "                                            \"cpu\":\"2\",\n",
+    "                                            \"memory\":\"1Gi\"\n",
+    "                                        },\n",
+    "                                        \"requests\":{\n",
+    "                                            \"cpu\":\"100m\",\n",
+    "                                            \"memory\":\"50Mi\"\n",
+    "                                        }\n",
+    "                                    }\n",
     "                                }\n",
     "                            ],\n",
     "                            \"imagePullSecrets\": [\n",
@@ -426,7 +448,18 @@
     "                                \"mountPath\": mnt_path,\n",
     "                                \"name\": \"data-volume\"\n",
     "                            }\n",
-    "                        ]\n",
+    "                        ],\n",
+    "                        \"resources\":\n",
+    "                        {\n",
+    "                            \"limits\":{\n",
+    "                                \"cpu\":\"2\",\n",
+    "                                \"memory\": \"1Gi\"\n",
+    "                            },\n",
+    "                            \"requests\":{\n",
+    "                                \"cpu\": \"100m\",\n",
+    "                                \"memory\":\"50Mi\"\n",
+    "                            }\n",
+    "                        }\n",
     "                    }\n",
     "                ],\n",
     "                \"imagePullSecrets\": [\n",
@@ -483,7 +516,18 @@
     "                                \"mountPath\": mnt_path,\n",
     "                                \"name\": \"data-volume\"\n",
     "                            }\n",
-    "                        ]\n",
+    "                        ],\n",
+    "                        \"resources\":\n",
+    "                        {\n",
+    "                            \"limits\":{\n",
+    "                                \"cpu\":\"2\",\n",
+    "                                \"memory\":\"1Gi\"\n",
+    "                            },\n",
+    "                            \"requests\":{\n",
+    "                                \"cpu\": \"100m\",\n",
+    "                                \"memory\":\"50Mi\"\n",
+    "                            }\n",
+    "                        }\n",
     "                    }\n",
     "                ],\n",
     "                \"imagePullSecrets\": [\n",
@@ -549,6 +593,13 @@
     "        predictor:\n",
     "          tensorflow:\n",
     "            storageUri: \"pvc://{volume_str}/\"\n",
+    "            resources:\n",
+    "              limits:\n",
+    "                cpu: '2'\n",
+    "                memory: 1Gi\n",
+    "              requests:\n",
+    "                cpu: 100m\n",
+    "                memory: 50Mi\n",
     "      '''\n",
     "\n",
     "    serving_launcher_op = components.load_component_from_file(serving_component_url)\n",
