--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -21,6 +21,12 @@
     "# # You need to generate secret to have ability read datasource files from S3 bucket by Spark application (Airflow DAG)\n",
     "# # Copy template \"object_store_secret.yaml.tpl\" from shared/ezua-tutorials/current-release/Data-Analytics/Spark directory to e.g. user folder\n",
     "\n",
+    "# # Users have to pull the following images manually and made available in local repo for clusters in airgap network to run the example.\n",
+    "  # \"nikenano/launchernew:latest\" , \"quay.io/aipipeline/kserve-component:v0.10.1\"\n",
+    "## Users have to add their local airgap repo path prefix to images mentioned above in following yaml files.\n",
+    "  # 'component/kubeflow-launcher-component.yaml' , 'component/kserve-component.yaml'\n",
+    "\n",
+    "\n",
     "import kfp\n",
     "\n",
     "kfp_client = kfp.Client()\n",
