EZAF-6164 Update serving url in bike-sharing example We have changed domain-template for KServe InferenceService url, so now it has only 1 subdomain. This was requested to enable usage of SSL certificates with one wildcard for subdomin (*.my-domain.com).

--- a/Data-Science/MLflow/bike-sharing-prediction.ipynb
+++ b/Data-Science/MLflow/bike-sharing-prediction.ipynb
@@ -87,7 +87,10 @@
     "NAMESPACE = namespace\n",
     "DEPLOYMENT_NAME = model_name\n",
     "MODEL_NAME = model_name\n",
-    "SVC = f'{DEPLOYMENT_NAME}-predictor.{NAMESPACE}.{DOMAIN_NAME}'\n",
+    "if DOMAIN_NAME == \"svc.cluster.local\":\n",
+    "    SVC = f'{DEPLOYMENT_NAME}-predictor.{NAMESPACE}.{DOMAIN_NAME}'\n",
+    "else:\n",
+    "    SVC = f'{DEPLOYMENT_NAME}-predictor-{NAMESPACE}.{DOMAIN_NAME}'\n",
     "URL = f\"https://{SVC}/v2/models/{MODEL_NAME}/infer\"\n",
     "\n",
     "print(URL)\n",
