Updated Weather Forecast example

--- a/Model-Monitoring/Weather Forecast.ipynb
+++ b/Model-Monitoring/Weather Forecast.ipynb
@@ -1149,12 +1149,38 @@
    ],
    "source": [
     "import whylogs as why\n",
+    "from datetime import datetime\n",
+    "import pandas as pd\n",
+    "\n",
     "batches = dataset.get_inference_data(number_batches=5)\n",
+    "\n",
     "for batch in batches:\n",
-    "  print(\"logging batch of size {} for {}\".format(len(batch.data),batch.timestamp))\n",
-    "  profile = why.log(batch.data).profile()\n",
-    "  profile.set_dataset_timestamp(batch.timestamp)\n",
-    "  profile.view().write(\"batch_{}\".format(batch.timestamp), overwrite=True)"
+    "    print(\"logging batch of size {} for {}\".format(len(batch.data), batch.timestamp))\n",
+    "    profile = why.log(batch.data).profile()\n",
+    "    profile.set_dataset_timestamp(batch.timestamp)\n",
+    "    \n",
+    "    # Format the timestamp for a valid filename\n",
+    "    formatted_timestamp = batch.timestamp.strftime(\"%Y%m%d_%H%M%S\")\n",
+    "    \n",
+    "    try:\n",
+    "        # Convert profile view to pandas DataFrame\n",
+    "        profile_view = profile.view()\n",
+    "        profile_df = profile_view.to_pandas()\n",
+    "        \n",
+    "        # Write DataFrame to CSV\n",
+    "        csv_filename = f\"batch_{formatted_timestamp}.csv\"\n",
+    "        profile_df.to_csv(csv_filename, index=False, encoding='utf-8')\n",
+    "        print(f\"Successfully wrote profile for batch {formatted_timestamp}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Failed to write profile: {e}\")\n",
+    "\n",
+    "    # Uploading to WhyLabs\n",
+    "    try:\n",
+    "        # Use the correct method for uploading to WhyLabs\n",
+    "        why.log(batch.data, dataset_timestamp=batch.timestamp).profile().upload()\n",
+    "        print(f\"Successfully uploaded profile for batch {formatted_timestamp}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Failed to upload profile: {e}\")"
    ]
   },
   {
