--- a/Data-Science/MLflow/bike-sharing-prediction.ipynb
+++ b/Data-Science/MLflow/bike-sharing-prediction.ipynb
@@ -87,7 +87,12 @@
     "NAMESPACE = namespace\n",
     "DEPLOYMENT_NAME = model_name\n",
     "MODEL_NAME = model_name\n",
-    "SVC = f'{DEPLOYMENT_NAME}-predictor.{NAMESPACE}.{DOMAIN_NAME}'\n",
+    "if DOMAIN_NAME == \"svc.cluster.local\":\n",
+    "    SVC = f'{DEPLOYMENT_NAME}-predictor.{NAMESPACE}.{DOMAIN_NAME}'\n",
+    "    VERIFY=False\n",
+    "else:\n",
+    "    SVC = f'{DEPLOYMENT_NAME}-predictor-{NAMESPACE}.{DOMAIN_NAME}'\n",
+    "    VERIFY=os.environ['EZUA_DOMAIN_CA_CERT_PATH']\n",
     "URL = f\"https://{SVC}/v2/models/{MODEL_NAME}/infer\"\n",
     "\n",
     "print(URL)\n",
@@ -115,7 +120,7 @@
     "\n",
     "headers = {\"Authorization\": f\"Bearer {os.environ['AUTH_TOKEN']}\"}\n",
     "\n",
-    "response = requests.post(URL, json=inputs, headers=headers, verify=False)\n",
+    "response = requests.post(URL, json=inputs, headers=headers, verify=VERIFY)\n",
     "\n",
     "print(response.reason)\n",
     "\n",
